<resources>
    <string name="app_name">Nasa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="image_of_the_day">Image of the day</string>
    <string name="titre">Titre</string>
    <string name="title">title</string>
    <string name="apod_image">apod image</string>
    <string name="contenu">Contenu</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="save_image">save image</string>
    <string name="user_history">User History</string>
    <string name="smhmn_cprog_gmail_com">smhmn.cprog@gmail.com</string>
    <string name="nasa_application_by_mnasri_mekrazi_nouri"><![CDATA[NASA Application - BY Mnasri & Mekrazi & Nouri]]></string>
</resources>
